--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,10 @@
 nav a{
     margin-right: 8px;
 }
+
+nav a.active{
+    text-decoration: underline;
+    background-color: rgb(246, 245, 245);
+    padding: 10px;
+    border-radius: 5px;
+}
